<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2014 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources>
    <string name="app_name"><![CDATA[Videos by Google]]></string>
    <string name="browse_title"><![CDATA[Videos by Google]]></string>
    <string name="related_movies">Related Movies</string>
    <string name="vertical_grid_title"><![CDATA[Vertical Video Grid]]></string>
    <string name="error">Error</string>
    <string name="ok">OK</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="init_text">00:00</string>
    <string name="play_pause_description">Play Pause Button</string>
    <string name="loading">Loading&#8230;</string>
    <string name="no_video_found">No video was found</string>
    <string name="version">Version: %1$s</string>
    <string name="popular_header">Popular Videos</string>
    <string name="more_samples">More Samples</string>
    <string name="grid_view">Grid View</string>
    <string name="error_fragment">Error Fragment</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="watch_trailer_1">Watch trailer</string>
    <string name="watch_trailer_2">FREE</string>
    <string name="rent_1">Rent By Day</string>
    <string name="rent_2">From $1.99</string>
    <string name="buy_1">Buy and Own</string>
    <string name="buy_2">AT $9.99</string>
    <string name="movie_index">MovieIndex</string>
    <string name="should_start">shouldStart</string>
    <string name="start_position">startPosition</string>
    <string name="search_results">Search Results</string>
    <string name="catalog_url">http://commondatastorage.googleapis.com/android-tv/android_tv_videos.json</string>
    <string name="prefix_url">http://commondatastorage.googleapis.com/android-tv/Sample%20videos/</string>

    <!-- Error messages -->
    <string name="failed_to_launch_app">Failed to launch application</string>
    <string name="failed_to_find_app">The application you are trying to launch is not available</string>
    <string name="failed_app_launch_timeout">The request to launch the application has timed out!</string>
    <string name="failed_to_play">Failed to start the playback of media</string>
    <string name="failed_to_pause">Failed to pause the playback of media</string>
    <string name="failed_to_connect">Could not connect to the device</string>
    <string name="failed_to_seek">Failed to seek to the specified position on the remote device</string>
    <string name="video_error_media_load_timeout">Media loading timed out</string>
    <string name="video_error_server_inaccessible">Media server was not reachable</string>
    <string name="video_error_unknown_error">Failed to load video</string>
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>
    <string name="oops">Oops</string>

    <!-- Preferences -->
    <string name="prefs_header_application">Application Behavior</string>
    <string name="prefs_header_application_summary">Control how the application behaves on the TV</string>
    <string name="prefs_termination_policy_default">0</string>
    <string name="prefs_termination_policy_dialog_title">When Disconnecting</string>
    <string name="prefs_volume_title">Volume Assignment</string>
    <string name="prefs_volume_title_summary">Controls %1$s</string>
    <string name="prefs_volume_dialog_title">Volume Assignment</string>
    <string name="prefs_volume_default">device</string>
    <string name="title_activity_test">TestActivity</string>

    <!-- Global Search -->
    <!-- The action label for global search -->
    <string name="global_search">GLOBALSEARCH</string>

    <!-- The label for use as a searchable item -->
    <string name="search_label">Leanback API Demo</string>

    <!-- The hint text that appears in the search box. -->
    <string name="search_hint">Search for videos</string>

    <!-- The description that will show up in the search settings for this source.  -->
    <string name="settings_description">Leanback API Demo Videos</string>

    <!-- General instructions in the main activity. -->
    <string name="search_instructions">Use the search box to search for videos</string>

    <!-- Shown above search results when we receive a search request. -->
    <plurals name="search_results">
        <item quantity="one">%1$d result for \"%2$s\": </item>
        <item quantity="other">%1$d results for \"%2$s\": </item>
    </plurals>

    <!-- Search failure message. -->
    <string name="no_results">No results found for \"%s\"</string>
    <string name="noah_description">to build an Ark to save creation from the coming flood.</string>
    <string name="noah_title">Noah</string>
    <string name="dragon2_title">How to Train Your Dragon 2</string>
    <string name="dragon2_description">Set in the mythical world of burly Vikings and wild dragons,
        and based on the book by Cressida Cowell, the action comedy tells the story of Hiccup, a
        Viking teenager who doesn\'t exactly fit in with his tribe\'s longstanding tradition of
        heroic dragon slayers. Hiccup\'s world is turned upside down when he encounters a dragon
        that challenges he and his fellow Vikings to see the world from an entirely different point
        of view.
    </string>
    <string name="maleficent_title">Maleficent</string>
    <string name="maleficent_description">The untold story of Disney\'s most iconic villain from the
        1959 classic "Sleeping Beauty." A beautiful, pure-hearted young woman with stunning black
        wings, Maleficent has an idyllic life growing up in a peaceable forest kingdom, until one
        day when an invading army of humans threatens the harmony of the land.
    </string>
    <string name="rating_0">rating_0</string>
    <string name="rating_1">rating_1</string>
    <string name="rating_2">rating_2</string>
    <string name="rating_3">rating_3</string>
    <string name="rating_4">rating_4</string>

</resources>
