<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/lb_grey"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    
    <ImageView
        android:id="@+id/card_image"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/card_title"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:padding="4dp"/>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp">


        <ImageView
            android:id="@+id/card_rating_0"
            android:src="@drawable/ic_action_star"
            android:tag="@string/rating_0"
            android:layout_width="16dp"
            android:layout_height="16dp" />
        <ImageView
            android:id="@+id/card_rating_1"
            android:src="@drawable/ic_action_star"
            android:tag="@string/rating_1"
            android:layout_width="16dp"
            android:layout_height="16dp" />
        <ImageView
            android:id="@+id/card_rating_2"
            android:src="@drawable/ic_action_star"
            android:tag="@string/rating_2"
            android:layout_width="16dp"
            android:layout_height="16dp" />
        <ImageView
            android:id="@+id/card_rating_3"
            android:src="@drawable/ic_action_star"
            android:tag="@string/rating_3"
            android:layout_width="16dp"
            android:layout_height="16dp" />
        <ImageView
            android:id="@+id/card_rating_4"
            android:src="@drawable/ic_action_star"
            android:tag="@string/rating_4"
            android:layout_width="16dp"
            android:layout_height="16dp" />

    </LinearLayout>

</LinearLayout>